# bandit-playground

./: .gitignore  README.md  pyproject.toml
scripts/: run_bernoulli.py  run_cascade.py  run_linear.py  run_pbm.py
src/bandit_playground/: __init__.py  experiment.py
src/bandit_playground/algorithms/: base.py  contextual_base.py  epsilon_greedy.py  exp3.py  gradient_bandit.py  kl_ucb.py  linear.py  ranking_base.py  ranking_cascade.py  ranking_pbm.py  softmax.py  thompson_bernoulli.py  ucb1.py  ucb_tuned.py
src/bandit_playground/envs/: bernoulli.py  linear.py  ranking.py
tests/: test_algorithms.py  test_envs.py  test_linear_algorithms.py  test_ranking_algorithms.py
